--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+base32 = "0.5.1"
 cocoon = "0.4.1"
 crossterm = "0.27.0"
 hex = "0.4.3"
